update method getAll (add Pageable)